# twinkill

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  Justfile  LICENSE  README.md  install.ps1  install.sh
.github/workflows/: release.yml
include/: tk_args.h  tk_batch.h  tk_image.c  tk_io.h  tk_platform.h  tk_scan.h  tk_ui.h  tk_ui_report.h
src/: args.c  batch.c  io.c  main.c  platform.c  scan.c  ui.c  ui_report.c
